# leaseaudit-model-training

./: .gitignore  README.md
data_collection/: .env.example  README.md  pyproject.toml
data_collection/app/: chat_model.py  extraction_chain.py  ocr_client.py
data_collection/app/core/: config.py  logger.py  output_parsers.py
data_collection/app/output_models/: extract_fields.py
data_collection/app/utils/: format_data.py
data_collection/scripts/: process_lease_agreements.py
extractive_qa/: lease_agreement_qa_data.csv  test_flan_t5_large.ipynb
lease_agreement_extraction/: finetune_flan_t5_xl_qlora.ipynb  finetune_flan_t5_xl_qlora.nbconvert.ipynb  finetune_gemma2.ipynb  finetune_gemma2_qlora.ipynb  finetune_gemma2_qlora_40_deals.ipynb  finetune_gemma2_qlora_40_deals.nbconvert.ipynb  finetune_gemma2_updated_lora_config.ipynb  finetune_phi3_qlora.ipynb  output.ipynb  temp_notebook.ipynb  temp_notebook.nbconvert.ipynb  test_t5_large_qa_inference.ipynb  test_t5_large_single_qa_inference.ipynb
model_training/: train_offer_letter_detector.ipynb
model_training/datasets/offer_letter_detection/not_offer_letters/: sample-2.txt  sample-4.txt  sample-5.txt  sample-6.txt
model_training/datasets/offer_letter_detection/offer_letters/: sample-2.txt  sample-3.txt  sample-4.txt  sample-6.txt
model_training/datasets/testing/not_offer_letters/: sample-4.txt
model_training/datasets/testing/offer_letters/: sample-2.txt
offer_letter_detection/: finetune_model.ipynb  finetune_model_bart.ipynb  finetune_model_roberta.ipynb
output/: extracted_lease_agreements.db
(+25 files in other folders)
